--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "v-calendar": "^3.1.2",
     "vue": "^3.4.21",
     "vue-draggable-next": "^2.2.1",
+    "vue-qrcode-reader": "^5.5.4",
     "vue-router": "^4.3.0",
     "zod": "^3.23.3"
   },
