--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@nuxtjs/tailwindcss": "^6.12.0",
     "@stylistic/eslint-plugin": "^1.7.2",
     "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.13",
     "@typescript-eslint/parser": "^7.7.1",
     "eslint": "^8.56.0",
     "eslint-import-resolver-typescript": "^3.6.1",
