update favicon & title

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,8 +1,8 @@
 version: '3'
 
 services:
-  gyrnal_web:
-    image: ghcr.io/pglaum/gyrnal_web:main
+  books:
+    image: ghcr.io/pglaum/books:main
     build:
       context: ./
       dockerfile: Dockerfile
