--- a/.vim/coc-settings.json
+++ b/.vim/coc-settings.json
@@ -2,5 +2,6 @@
 {
 	"eslint.autoFixOnSave": true,
 	"eslint.packageManager": "yarn",
-	"volar.disableFormatting": true
+	"volar.disableFormatting": true,
+	"typescript.format.enable": false
 }
